# skeleton

./: Cargo.toml  Readme.md  log4rs.yml
assets/: forward.frag  forward.vert  shader.frag
src/: app.rs  build.rs  caps.rs  device.rs  engine.rs  main.rs  messages.rs
src/buffer/: keys.rs  manager.rs  mod.rs  resource.rs  spec.rs
src/gameplay/: mod.rs  thread.rs
src/image/: image.rs  keys.rs  logical.rs  manager.rs  mod.rs  resource.rs  spec.rs
src/render/: composition.frag.spv  composition.vert.spv  context.rs  forward.frag.spv  forward.vert.spv  frame.rs  frame_ring.rs  mod.rs  pipeline-arch.rs  pipeline.rs  present.rs  render_packet.rs  renderer.rs  shader.rs  submit.rs  swapchain.rs  thread.rs  triangle.frag.spv
src/render/framegraph/: alias-arch.rs  alias.rs  barrier.rs  builder.rs  graph.rs  image.rs  layouts.rs  mod.rs
src/render/framegraph/alias/: data.rs  mod.rs  registry.rs  resolved.rs
src/render/framegraph/pass/: attachment.rs  composition.rs  culling.rs  forward.rs  mod.rs  present.rs
src/render/pipeline/: manager.rs  mod.rs
src/upload/: mod.rs  thread.rs
src/vulkan/: context.rs  debug.rs  device.rs  device_context.rs  instance.rs  mod.rs  physical.rs  surface.rs  swapchain.rs
