[package]
name = "skeleton"
version = "0.1.0"
edition = "2024"

[features]
default = []
tracing = []

[dependencies]
anyhow = "1.0.100"
ash = {version = "0.38.0", features=["std", "linked"]}
crossbeam-channel = "0.5.15"
winit = "0.30.12"
raw-window-handle = "0.6.2"
ash-window = "0.13.0"
log = "0.4.29"
log4rs = "1.4.0"
vk-mem = "0.5.0"

tracy-client = "0.18.4"
tracing = "0.1.44"
tracing-tracy = "0.11.4"
tracing-subscriber = "0.3.22"
bytemuck = "1.24.0"
slotmap = "1.1.1"
smallvec = "1.15.1"
